<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_menu_search_holo_dark"
        android:orderInCategory="101"
        android:title="@string/search"
        app:showAsAction="always" />
    <item
        android:id="@+id/share"
        android:icon="@android:drawable/ic_menu_share"
        android:orderInCategory="102"
        android:title="@string/share"
        app:showAsAction="always" />

</menu>
