<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="android.valto.fi.template.activities.CollapseTabsActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/share"
        android:icon="@drawable/abc_ic_menu_share_mtrl_alpha"
        android:orderInCategory="101"
        android:title="@string/share"
        app:showAsAction="ifRoom"></item>
    <item
        android:id="@+id/search"
        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
        android:orderInCategory="101"
        android:title="@string/search"
        app:showAsAction="ifRoom"></item>
</menu>
