<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="android.valto.fi.template.activities.DialogBoxesActivity">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/light_simple_dialog"
                android:layout_width="@dimen/button_width"
                android:layout_height="48dp"
                android:text="@string/simple_light_dialog" />


            <Button
                android:id="@+id/light_list_dialog"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:text="@string/list_light_dialog" />

            <Button
                android:id="@+id/light_radio_dialog"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:text="@string/radio_light_dialog" />

            <Button
                android:id="@+id/light_multi_choice_dialog"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:text="@string/light_checkbox_dialog" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/dark_simple_dialog"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:background="@drawable/dark_buton_bg"
                android:text="Simple Dark Dialog"
                android:textColor="@color/white" />


            <Button
                android:id="@+id/dark_list_dialog"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:background="@drawable/dark_buton_bg"
                android:text="List Dark Dialog"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/dark_radio_dialog"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:background="@drawable/dark_buton_bg"
                android:text="Radio Dark Dialog"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/dark_multi_choice_dialog"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:background="@drawable/dark_buton_bg"
                android:text="Dark Checkbox Dialog"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
