<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:wheel="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="android.valto.fi.template.views.UIElements">

    <include
        android:id="@+id/toolbar"
        layout="@layout/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <com.pnikosis.materialishprogress.ProgressWheel
            android:id="@+id/progress_wheel"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            wheel:matProg_barColor="#5588FF"
            wheel:matProg_progressIndeterminate="true" />

        <com.pnikosis.materialishprogress.ProgressWheel
            android:id="@+id/progress_wheel2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            wheel:matProg_barColor="#E61A5F"
            wheel:matProg_progressIndeterminate="true" />

        <com.pnikosis.materialishprogress.ProgressWheel
            android:id="@+id/progress_wheel3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            wheel:matProg_barColor="#90C653"
            wheel:matProg_progressIndeterminate="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <com.pnikosis.materialishprogress.ProgressWheel
            android:id="@+id/progress_wheel4"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            wheel:matProg_barColor="#000000"
            wheel:matProg_progressIndeterminate="true" />

        <com.pnikosis.materialishprogress.ProgressWheel
            android:id="@+id/progress_wheel5"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            wheel:matProg_barColor="#FEC04A"
            wheel:matProg_progressIndeterminate="true" />

        <com.pnikosis.materialishprogress.ProgressWheel
            android:id="@+id/progress_wheel6"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            wheel:matProg_barColor="#F05133"
            wheel:matProg_progressIndeterminate="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="5dp">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioButton_name" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioButton_name" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioButton_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="5dp">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_name" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_name" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_name" />
    </LinearLayout>

    <Button
        android:id="@+id/snackbar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:text="@string/snackbar_button"
        android:textColor="@color/white" />

</LinearLayout>
